tests/diagnostics/expressions/operators/equality_unexpected_equals/expect.txt
# exit: 1
input/main.coppice:2:14: error: unexpected '=' in expression
      return 1 = 2
               ^
